Fix header of Station Inventory, Responsive Design of it, apply horizontal scroll behavior

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
       style-src 'self' 'unsafe-inline' data:;
       img-src 'self' data: https:;
       font-src 'self' data:;
-      connect-src 'self' https://blxrymicjowtplrkusck.supabase.co https://*.supabase.co;
+      connect-src 'self' https://blxrymicjowtplrkusck.supabase.co https://*.supabase.co wss://blxrymicjowtplrkusck.supabase.co wss://*.supabase.co;
       base-uri 'self';
       form-action 'self';
     " />
+
     
     <!-- Prevents clickjacking attacks -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
